v1.1.4 - December 22, 2011
* added "spawnLocalRandom" strategy for spawning at a random spawn point on
the local world

v1.1.3 - December 19, 2011
* Ticket #31: bugfix for /sethome taking money when player is at home limit

v1.1.2 - December 17, 2011
* Ticket #27: fix permissions for perm systems not supporting superperms
* some code cleanup/refactoring
* The above changes come with a new config option "permissions" which allow
you to select which permission system you want to use. By default it will go
through the list and use the first available, but now you can change it if you
want (for example, maybe you prefer to use WEPIF instead of Vault).

v1.1.1 - December 8, 2011
* fix for HSP throwing NPE when a world has been deleted
* fix for "/homelist <world>" not working properly
* added "onNamedHomeCommand" event type, called when player types "/home
name". New strategy "homeNamedHome" was added to match. This doesn't change
default functionality any, but it allows admins to influence the outcome of a
player typing "/home name" using home modes - for example you could use
"modeHomeNoBed" to disallow players using their bed homes on "/home name".
* added ability for HSP to respond to console commands to "/hsp" (so you can
"/hsp rc" to reload the config from the console, for example)

v1.1 - December 4, 2011
* Ticket #15: fixed a bug with modeHomeNoBed strategy
* Ticket #16: better firstLogin detection, check world/players/player.dat
* Ticket #17: fixed an NPE bug with /groupspawn command if no groupspawn is defined
* Ticket #19: fixed issue with warmups being canceled due to movement detection being too sensitive
* Ticket #13: new feature, config param "homeLimits.singleGlobalHome" to enforce a single global home that always changes when using /sethome (or a bed)
* new permission "hsp.singleGlobalHomeExempt" to be exempt from "singleGlobalHome" restriction