@@ -7,6 +7,7 @@ import org.bukkit.command.Command;
 import org.bukkit.entity.Player;
 import org.morganm.homespawnplus.HomeSpawnPlus;
 import org.morganm.homespawnplus.command.BaseCommand;
+import org.morganm.homespawnplus.config.ConfigOptions;
 import org.morganm.homespawnplus.storage.Storage;
 
 
@@ -22,23 +23,28 @@ public class SetHome extends BaseCommand
 	public String[] getCommandAliases() { return new String[] {"homeset"}; }
 	
 	@Override
-	public boolean execute(Player p, Command command, String[] args) {
+	public boolean execute(final Player p, final Command command, final String[] args) {
 		debug.debug("sethome invoked. player=",p,"args=",args);
-		if( !defaultCommandChecks(p) )
+		if( !isEnabled() || !hasPermission(p) )
 			return true;
+//		if( !defaultCommandChecks(p) )
+//			return true;
 		
 		if( !costCheck(p) ) {
 			printInsufficientFundsMessage(p);
 			return true;
 		}
-		
+
+		String cooldownName = null;
+		String homeName = null;
+
 		if( args.length > 0 ) {
 			if( plugin.hasPermission(p, SETHOME_NAMED_PERMISSION) ) {
 				if( !args[0].equals(Storage.HSP_BED_RESERVED_NAME) && !args[0].endsWith("_" + Storage.HSP_BED_RESERVED_NAME )) {
-					if( util.setNamedHome(p.getName(), p.getLocation(), args[0], p.getName()) ) {
-						applyCost(p, true);
-						util.sendMessage(p, "Home \""+args[0]+"\" set successfully.");
-					}
+					if( !cooldownCheck(p, cooldownName) )
+						return true;
+					
+					homeName = args[0];
 				}
 				else
 					util.sendMessage(p, "Cannot used reserved name "+args[0]);
@@ -46,14 +52,28 @@ public class SetHome extends BaseCommand
 			else
 				util.sendMessage(p, "You do not have permission to set named homes");
 		}
+		
+		if( homeName != null ) {
+			if( util.setNamedHome(p.getName(), p.getLocation(), homeName, p.getName()) ) {
+				if( applyCost(p, true, getCooldownName(homeName)) )
+					util.sendMessage(p, "Home \""+args[0]+"\" set successfully.");
+			}
+		}
 		else {
 			if( util.setHome(p.getName(), p.getLocation(), p.getName(), true, false) ) {
-				applyCost(p, true);
-				util.sendMessage(p, "Default home set successfully.");
+				if( applyCost(p, true, getCooldownName(null)) )
+					util.sendMessage(p, "Default home set successfully.");
 			}
 		}
 
 		return true;
+	}
+
+	private String getCooldownName(String homeName) {
+		if( homeName != null && plugin.getHSPConfig().getBoolean(ConfigOptions.COOLDOWN_PER_HOME, false) )
+			return getCommandName() + "." + homeName;
+		else
+			return getCommandName();
 	}
 
 }
